# sensors_miscdevice_fork

./: DemoAll.json  DemoCurrent.json  README.md  README_zh.md  bundle.json  hisysevent.yaml  miscdevice.gni  ohos.build
assets/: test.json
frameworks/capi/: BUILD.gn  vibrator.cpp
frameworks/capi/test/unittest/: BUILD.gn  vibrator_test.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/vibrator/include/: vibrator_napi_error.h  vibrator_napi_utils.h  (+1 more)
frameworks/native/common/include/: i_miscdevice_service.h  miscdevice_service_proxy.h  sensors_ipc_interface_code.h
frameworks/native/common/src/: miscdevice_service_proxy.cpp
frameworks/native/light/: BUILD.gn  light_agent.cpp
frameworks/native/light/include/: light_client.h
frameworks/native/light/src/: light_client.cpp
frameworks/native/light/test/: BUILD.gn
frameworks/native/miscdevice/: BUILD.gn
frameworks/native/miscdevice/include/: i_miscdevice_service.h  light_client.h  miscdevice_service_proxy.h  sensors_ipc_interface_code.h  vibrator_service_client.h
frameworks/native/miscdevice/src/: light_client.cpp  miscdevice_service_proxy.cpp  vibrator_service_client.cpp
frameworks/native/vibrator/: BUILD.gn  vibrator_agent.cpp
frameworks/native/vibrator/include/: i_vibrator_client.h  vibrator_client_stub.h  vibrator_service_client.h
frameworks/native/vibrator/src/: vibrator_client_stub.cpp  vibrator_service_client.cpp
frameworks/native/vibrator/test/: BUILD.gn
interfaces/inner_api/light/: light_agent.h  light_agent_type.h
interfaces/inner_api/vibrator/: vibrator_agent.h  vibrator_agent_type.h
interfaces/kits/c/: BUILD.gn  lib_vibrator.ndk.json  vibrator.h  vibrator_type.h
interfaces/native/light/: BUILD.gn  light_agent_type.h
interfaces/native/light/include/: light_agent.h  light_agent_type.h
interfaces/native/light/src/: light_agent.cpp
interfaces/native/vibrator/: BUILD.gn
interfaces/native/vibrator/include/: vibrator_agent.h  vibrator_agent_type.h
interfaces/native/vibrator/src/: vibrator_agent.cpp
interfaces/native/vibrator/test/: BUILD.gn
interfaces/plugin/: BUILD.gn
interfaces/plugin/vibrate/src/: vibrator_napi_utils.cpp
interfaces/plugin/vibrator/include/: vibrator_napi_error.h  vibrator_napi_utils.h
interfaces/plugin/vibrator/src/: vibrator_napi_error.cpp  vibrator_napi_utils.cpp
services/miscdevice_service/: BUILD.gn
services/miscdevice_service/custom_vibrate_decode/include/: custom_vibration_default_matcher.h  custom_vibration_specific_matcher.h  i_custom_vibration_matcher.h
services/miscdevice_service/custom_vibrate_decode/src/: custom_vibration_default_matcher.cpp  custom_vibration_specific_matcher.cpp  default_vibrator_decoder.cpp
services/miscdevice_service/haptic_matcher/include/: custom_vibration_matcher.h
services/miscdevice_service/haptic_matcher/src/: custom_vibration_matcher.cpp
services/miscdevice_service/include/: miscdevice_service.h  miscdevice_service_stub.h  vibration_priority_manager.h  vibrator_infos.h  vibrator_thread.h
services/miscdevice_service/src/: miscdevice_dump.cpp  miscdevice_service.cpp  miscdevice_service_stub.cpp  vibration_priority_manager.cpp  vibrator_thread.cpp
test/fuzztest/service/transferclientremoteobjectstub_fuzzer/: BUILD.gn
test/unittest/light/: light_agent_test.cpp
test/unittest/vibrator/capi/: BUILD.gn  vibrator_test.cpp
test/unittest/vibrator/native/: vibrator_agent_test.cpp
utils/: BUILD.gn
utils/common/include/: sensors_errors.h  vibrator_infos.h
utils/haptic_decoder/: BUILD.gn
utils/haptic_decoder/he_json/: BUILD.gn
utils/haptic_decoder/he_json/include/: he_vibrator_decoder.h
utils/haptic_decoder/he_json/src/: he_vibrator_decoder.cpp
utils/haptic_decoder/oh_json/: BUILD.gn
utils/haptic_decoder/src/: default_vibrator_decoder.cpp
utils/include/: file_utils.h  json_parser.h  sensors_errors.h
utils/src/: file_utils.cpp  json_parser.cpp
vibrator/: BUILD.gn  README.md  README_zh.md  ohos.build  vibrator.gni
vibrator/interfaces/kits/js/napi/: AsyncWorkData.h  BUILD.gn  asyncworkdata.h  native_module.cpp  util.h  vibrator.cpp  vibrator.h
(+42 files in other folders)
