# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("vibrator") {
  include_dirs = [
    "//drivers/peripheral/misc/vibrator/interfaces/include",
    "//foundation/ace/napi/interfaces/kits",
    "//third_party/node/src",
    "//utils/system/safwk/native/include",
    "./",
  ]
  cflags = [
    "-fPIC",
    "-g3",
  ]
  sources = [
    "vibrator.cpp",
    "native_module.cpp",
  ]

  deps = [
    "//drivers/peripheral/misc/vibrator/hal:hdi_vibrator",
    "//foundation/ace/napi:ace_napi",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "sensors"
  part_name = "sensors_miscdevice"
}
